--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -8,7 +8,7 @@
 
 .post-meta {
   color: $gray-darker;
-  padding-bottom: 10px;
+  padding-bottom: 25px;
   border-bottom: 1px solid $gray-light;
 }
 
