--- a/_sass/_toc.scss
+++ b/_sass/_toc.scss
@@ -73,6 +73,7 @@
 }
 
 #toc-container {
-	margin-bottom: 20px;
+    padding-bottom: 15px;
+	margin-bottom: 30px;
     border-bottom: 1px solid $gray-light;
 }
